

[tool.coverage.run]
source = ["fast_db_models"]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-db-models"
version = "0.1.0"
description = "Shared SQLAlchemy ORM models for FastMVC apps (user/auth, payments, conversations, webhooks, etc.)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sqlalchemy>=2.0,<3.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true
package-dir = { "fast_db_models" = "src" }
packages = ["fast_db_models"]
